--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,17 @@
     "type": "project",
     "license": "MIT",
     "minimum-stability": "stable",
-    "require": {}
+    "require": {
+        "illuminate/database": "^11.41",
+        "illuminate/routing": "^11.41",
+        "illuminate/view": "^11.41",
+        "illuminate/http": "^11.41",
+        "illuminate/validation": "^11.41",
+        "illuminate/support": "^11.41"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        }
+    }
 }
