--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
+DB_CONNECTION=mysql
 DB_HOST=localhost
-DB_NAME= 
-DB_USER=root
+DB_DRIVER=mysql
+DB_DATABASE=mvc
+DB_USERNAME=root
 DB_PASSWORD=
-APP_ENV=development
