--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "illuminate/view": "^11.41",
         "illuminate/http": "^11.41",
         "illuminate/validation": "^11.41",
-        "illuminate/support": "^11.41"
+        "illuminate/support": "^11.41",
+        "vlucas/phpdotenv": "^5.6"
     },
     "autoload": {
         "psr-4": {
