--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_DRIVER=mysql
-DB_DATABASE='mvc'
-DB_USERNAME='root'
+DB_DATABASE=mvc
+DB_USERNAME=root
 DB_PASSWORD=
