--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "illuminate/http": "^11.41",
         "illuminate/validation": "^11.41",
         "illuminate/support": "^11.41",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "symfony/var-dumper": "^7.2"
     },
     "autoload": {
         "psr-4": {
